--- a/config/database.yml
+++ b/config/database.yml
@@ -5,13 +5,15 @@ default: &default
   timeout: 5000
 
 development:
-  <<: *default
   database: jira_clone_development
-  username: postgres
-  password: <%= ENV['JIRA_CLONE_DATABASE_PASSWORD'] %>
+  username: jira_db
+  password: 12345
   host: localhost
   port: 5432
+  <<: *default
 
 test:
-  <<: *default
   database: jira_clone_test
+  username: jira_db
+  password: 12345
+  <<: *default
